# heimdall

./: Cargo.toml
src/: error.rs  fs.rs  glob.rs  graph.rs  lib.rs  tree.rs
src/glob/: parser.rs  tokenizer.rs
src/tree/: ignore.rs  store.rs
