[package]
name = "heimdall"
version = "0.1.0"
authors = ["Neil Ashford"]
edition = "2018"

[[bin]]
name = "hd"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.4.4"
libc = "0.2.76"
thiserror = "1.0.20"
hashbrown = { version = "0.8.2", features = ["raw"] }
log = "0.4.11"
env_logger = "0.7.1"
scopeguard = "1.1.0"
slab = "0.4.2"
structopt = "0.3.17"
either = "1.6.0"
errno = "0.2.6"
itertools = "0.9.0"
regex = "1.3.9"
regex-syntax = "0.6.18"
bitflags = "1.2.1"